build.log
 Downloading crates ...
  Downloaded digest v0.10.7
  Downloaded gbm v0.18.0
  Downloaded crypto-common v0.1.7
  Downloaded cgmath v0.18.0
  Downloaded khronos_api v3.1.0
  Downloaded smithay v0.7.0
  Downloaded input-sys v1.19.0
   Compiling proc-macro2 v1.0.106
   Compiling unicode-ident v1.0.24
   Compiling pkg-config v0.3.33
   Compiling quote v1.0.45
   Compiling libc v0.2.186
   Compiling bitflags v2.13.0
   Compiling rustix v1.1.4
   Compiling linux-raw-sys v0.12.1
   Compiling cfg-if v1.0.4
   Compiling find-msvc-tools v0.1.9
   Compiling shlex v2.0.1
   Compiling syn v2.0.117
   Compiling cc v1.2.64
   Compiling wayland-sys v0.31.11
   Compiling version_check v0.9.5
   Compiling generic-array v0.14.7
   Compiling getrandom v0.3.4
   Compiling smallvec v1.15.2
   Compiling once_cell v1.21.4
   Compiling memchr v2.8.2
   Compiling wayland-backend v0.3.15
   Compiling quick-xml v0.39.4
   Compiling zerocopy v0.8.52
   Compiling drm-sys v0.8.1
   Compiling typenum v1.20.1
   Compiling khronos_api v3.1.0
   Compiling autocfg v1.5.1
   Compiling downcast-rs v1.2.1
   Compiling log v0.4.32
   Compiling num-traits v0.2.19
   Compiling wayland-scanner v0.31.10
   Compiling tracing-core v0.1.36
   Compiling libudev-sys v0.1.4
   Compiling linux-raw-sys v0.9.4
   Compiling drm-fourcc v2.2.0
   Compiling io-lifetimes v1.0.11
   Compiling rustix v0.38.44
   Compiling bytemuck_derive v1.10.2
   Compiling wayland-server v0.31.13
   Compiling libseat-sys v0.2.0
   Compiling gbm-sys v0.4.0
   Compiling xml-rs v0.8.28
   Compiling input-sys v1.19.0
   Compiling linux-raw-sys v0.4.15
   Compiling gl_generator v0.14.0
   Compiling wayland-protocols v0.32.12
   Compiling bytemuck v1.25.0
   Compiling drm-ffi v0.9.1
   Compiling tracing-attributes v0.1.31
   Compiling rand_core v0.9.5
   Compiling ppv-lite86 v0.2.21
   Compiling block-buffer v0.10.4
   Compiling crypto-common v0.1.7
   Compiling pin-project-lite v0.2.17
   Compiling cgmath v0.18.0
   Compiling thiserror v2.0.18
   Compiling libseat v0.2.4
   Compiling rand_chacha v0.9.0
   Compiling digest v0.10.7
   Compiling udev v0.9.3
   Compiling tracing v0.1.44
   Compiling drm v0.14.1
   Compiling approx v0.4.0
   Compiling smithay v0.7.0
   Compiling profiling-procmacros v1.0.18
   Compiling thiserror-impl v2.0.18
   Compiling polling v3.11.0
   Compiling memmap2 v0.9.10
   Compiling errno v0.3.14
   Compiling fastrand v2.4.1
   Compiling lazy_static v1.5.0
   Compiling slab v0.4.12
   Compiling xkeysym v0.2.1
   Compiling equivalent v1.0.2
   Compiling cpufeatures v0.2.17
   Compiling hashbrown v0.17.1
   Compiling sha2 v0.10.9
   Compiling xkbcommon v0.8.0
   Compiling calloop v0.14.4
   Compiling indexmap v2.14.0
   Compiling wayland-protocols-misc v0.3.12
   Compiling wayland-protocols-wlr v0.3.12
   Compiling tempfile v3.27.0
   Compiling sharded-slab v0.1.7
   Compiling gbm v0.18.0
   Compiling profiling v1.0.18
   Compiling input v0.9.1
   Compiling rand v0.9.4
   Compiling tracing-log v0.2.0
   Compiling thread_local v1.1.9
   Compiling libloading v0.8.9
   Compiling nu-ansi-term v0.50.3
   Compiling appendlist v1.4.0
   Compiling atomic_float v1.1.0
   Compiling cursor-icon v1.2.0
   Compiling tracing-subscriber v0.3.23
   Compiling zenos v0.1.0 (/home/pc/ZenOS)
warning: unused import: `NodeType`
  --> src/backend.rs:19:62
   |
19 | use smithay::backend::drm::{DrmDevice, DrmDeviceFd, DrmNode, NodeType};
   |                                                              ^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0308]: mismatched types
   --> src/backend.rs:126:33
    |
126 |     let fd = session.open(path, OFlags::RDWR | OFlags::CLOEXEC)?;
    |                      ----       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `smithay::reexports::rustix::fs::OFlags`, found `rustix::fs::OFlags`
    |                      |
    |                      arguments to this method are incorrect
    |
note: there are multiple different versions of crate `rustix` in the dependency graph
   --> /home/pc/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/bitflags-2.13.0/src/public.rs:17:9
    |
 17 |           $vis struct $PublicBitFlags(<$PublicBitFlags as $crate::__private::PublicFlags>::Internal);
    |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    |           |
    |           this is the expected type
    |           this is the found type
    |
   ::: /home/pc/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/rustix-1.1.4/src/backend/linux_raw/fs/types.rs:169:1
    |
169 | / bitflags! {
170 | |     /// `O_*` constants for use with [`openat`].
171 | |     ///
172 | |     /// [`openat`]: crate::fs::openat
...   |
270 | | }
    | |_- in this macro invocation
    = help: you can use `cargo tree` to explore your dependency tree
note: method defined here
   --> /home/pc/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/smithay-0.7.0/src/backend/session/mod.rs:48:8
    |
 48 |     fn open(&mut self, path: &Path, flags: OFlags) -> Result<OwnedFd, Self::Error>;
    |        ^^^^
    = note: this error originates in the macro `$crate::__declare_public_bitflags` which comes from the expansion of the macro `bitflags` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0596]: cannot borrow `gpu.drm` as mutable, as it is behind a `&` reference
  --> src/backend.rs:87:17
   |
87 |                 gpu.drm.pause();
   |                 ^^^^^^^ `gpu` is a `&` reference, so it cannot be borrowed as mutable

Some errors have detailed explanations: E0308, E0596.
For more information about an error, try `rustc --explain E0308`.
warning: `zenos` (bin "zenos") generated 1 warning
error: could not compile `zenos` (bin "zenos") due to 2 previous errors; 1 warning emitted
